<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.landing.MainActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/welcome_to"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/welcome"
        app:layout_constraintStart_toStartOf="@+id/welcome"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:srcCompat="@drawable/sigfood" />

    <TextView
        android:id="@+id/sigfood"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:text="@string/sigfood"
        android:fontFamily="@font/roboto_medium"
        android:textSize="16sp"
        android:alpha="0"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <TextView
        android:id="@+id/coba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/coba"
        android:fontFamily="@font/roboto_medium"
        android:textSize="16dp"
        android:alpha="0"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sigfood" />

    <Button
        android:id="@+id/btnMulai"
        style="@style/btnPrimary"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/mulai"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_bold"
        android:textSize="20sp"
        android:alpha="0"
        android:background="@drawable/rounded_circle"
        app:layout_constraintEnd_toEndOf="@+id/coba"
        app:layout_constraintStart_toStartOf="@+id/coba"
        app:layout_constraintTop_toBottomOf="@+id/coba" />

</androidx.constraintlayout.widget.ConstraintLayout>