<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.container.ui.account.AccountFragment">

    <Button
        android:id="@+id/btnLogout"
        style="@style/btnPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_developer" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgAccount"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/ic_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAccount" />

    <ImageView
        android:id="@+id/imgSyarat"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_privacy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_syarat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/syarat_dan_ketentuan"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/imgSyarat"
        app:layout_constraintTop_toTopOf="@+id/imgSyarat" />

    <ImageView
        android:id="@+id/imgPrivasi"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_vpn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgSyarat" />

    <TextView
        android:id="@+id/tv_prvasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="Kebijakan Privasi"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/imgPrivasi"
        app:layout_constraintTop_toTopOf="@+id/imgPrivasi" />

    <ImageView
        android:id="@+id/imgDeveloper"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_developer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPrivasi" />

    <TextView
        android:id="@+id/tv_developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_regular"
        android:text="Team Developer"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/imgDeveloper"
        app:layout_constraintTop_toTopOf="@+id/imgDeveloper" />

</androidx.constraintlayout.widget.ConstraintLayout>